Toolchain doc re: jars->java 9 modules